--- a/tootoo/r5/tootoo-r5-masson-sagemath-docs-02.html
+++ b/tootoo/r5/tootoo-r5-masson-sagemath-docs-02.html
@@ -34,14 +34,14 @@
 	};
 */
 
-
+	var b = '<br>';
 
 	init();
 
 	function init() {
 
-		var css, container, contents, hamburger, menu;
-		var b = '<br>';
+		var css;
+		var container, contents, hamburger, menu;
 
 		css = document.body.appendChild( document.createElement('style') );
 		css.innerHTML =
@@ -133,9 +133,9 @@
 
 			'</div>' +
 
-			'<div id=hamburger onclick=container.style.left=container.style.left===""?"-325px":""; >' +
-				'<div id=bars title="Click this hamburger to slide the menu" > &#9776 </div>' +
-			'</div>' +
+//			'<div id=hamburger onclick=container.style.left=container.style.left===""?"-325px":""; >' +
+//				'<div id=bars title="Click this hamburger to slide the menu" > &#9776 </div>' +
+//			'</div>' +
 
 			'<div id=contents >' +
 				'<h1>Typical contents</h1>' +
@@ -143,11 +143,48 @@
 
 		'';
 
+		button = document.body.appendChild( document.createElement( 'div' ) );
+		button.id = 'button';
+		button.innerHTML = 'Edit';
+
 		window.addEventListener( 'resize', onWindowResize, false );
 
 		onWindowResize();
 
-		TOO.init( users[ 'sagemathDocs' ] );
+		setUser( 'sagemathDocs' );
+
+
+	}
+
+	function setUser( user ){
+
+		TOO = users[ user ];
+// to JS?
+//		TOO.url = 'https://api.github.com/repos/' + TOO.user + '/' + TOO.repo + '/git/trees/' + TOO.branch + '?recursive=1';
+
+		if ( TOO.rawgit ) {
+
+			TOO.urlGHPages = 'https://rawgit.com/' + TOO.user + '/' + TOO.repo + '/' + TOO.branch + '/' + TOO.folder + ( TOO.folder ? '/' : '' );
+
+		} else {
+
+			TOO.urlGHPages = 'https://' + TOO.user + '.github.io/' + TOO.repo + '/' + TOO.folder + ( TOO.folder ? '/' : '' );
+
+		}
+
+		getNextPreviousButtons();
+
+// all needed?
+
+		TOO.contents = contents;
+		TOO.breadcrumbs = menuBreadcrumbs;
+		TOO.menu = menuItems;
+		TOO.menuInfo = menuInfo;
+		TOO.button = button;
+
+		requestAPIContents();
+
+
 	}
 
 
@@ -158,6 +195,21 @@
 		contents.style.width = window.innerWidth - 350;
 
 	}
+
+
+/*
+	function setUser() {
+
+		TOO.contents = contents;
+		TOO.breadcrumbs = menuBreadcrumbs;
+		TOO.menu = menuItems;
+		TOO.menuInfo = menuInfo;
+
+		getNextPreviousButtons();
+
+	}
+*/
+
 
 </script>
 </body>
