--- a/tootoo/r5/tootoo-r5-theo-pages2-01.html
+++ b/tootoo/r5/tootoo-r5-theo-pages2-01.html
@@ -2,11 +2,11 @@
 <html lang=en >
 <head>
 <meta charset=utf-8 >
-<title>SageMath Docs</title>
+<title>TA Pages2</title>
 <meta name=viewport content='width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no' >
 <meta name=description content='' >
 <meta name=keywords content='CSS,HTML,JavaScript,GitHub,FOSS' >
-<meta name=date content='2017-02-16' >
+<meta name=date content='2017-02-26' >
 </head>
 <body>
 <script src=https://cdn.rawgit.com/showdownjs/showdown/master/dist/showdown.min.js ></script>
@@ -17,11 +17,11 @@
 
 	var users = {};
 
-	users.sagemathDocs = {
-		user : 'paulmasson',
-		repo : 'sagemath-docs',
-		branch : 'gh-pages',
-		folder : 'functions',
+	users.theoArmour = {
+		user : 'theo-armour',
+		repo : 'theo-armour.github.io',
+		branch : 'master',
+		folder : 'pages2',
 		noIndex : 'true'
 	};
 
@@ -34,14 +34,13 @@
 	};
 */
 
-
+	var b = '<br>';
 
 	init();
 
 	function init() {
 
 		var css, container, contents, hamburger, menu;
-		var b = '<br>';
 
 		css = document.body.appendChild( document.createElement('style') );
 		css.innerHTML =
@@ -84,7 +83,8 @@
 		container.id = 'container';
 		container.innerHTML =
 
-				'<div id=menu >' +
+			'<div id=menu >' +
+
 
 				'<h2>' +
 					'<a href=https://pushme-pullyou.github.io/ title="Pushme-Pullyou - your coming and going happy place" > &#x2766 </a><br>' +
@@ -94,9 +94,9 @@
 
 				'<div class=popUp id=popHelp style=display:none; ><div>Hi there!</div>Click the i-in-circle, info icon for latest updates.</div>' +
 
-				'<div><small><i>Browse and view the contents of files on GitHub remarkably quickly</i></small></div>' + b +
+				'<p><small>Browse some of my work with a utility I\'m in the process of building.</small></p>' +
 
-//				'<p><small>Browse some of my work with a utility I\'m in the process of building.</small></p>' +
+				'<details open>' +
 
 				'<details open>' +
 
@@ -138,16 +138,52 @@
 			'</div>' +
 
 			'<div id=contents >' +
-				'<h1>Typical contents</h1>' +
+				'<h1>.</h1>' +
 			'</div>' +
 
 		'';
+
+		button = document.body.appendChild( document.createElement( 'div' ) );
+		button.id = 'button';
+		button.innerHTML = 'Edit';
 
 		window.addEventListener( 'resize', onWindowResize, false );
 
 		onWindowResize();
 
-		TOO.init( users[ 'sagemathDocs' ] );
+		setUser( 'theoArmour' );
+
+
+	}
+
+	function setUser( user ){
+
+		TOO = users[ user ];
+// to JS?
+//		TOO.url = 'https://api.github.com/repos/' + TOO.user + '/' + TOO.repo + '/git/trees/' + TOO.branch + '?recursive=1';
+
+		if ( TOO.rawgit ) {
+
+			TOO.urlGHPages = 'https://rawgit.com/' + TOO.user + '/' + TOO.repo + '/' + TOO.branch + '/' + TOO.folder + ( TOO.folder ? '/' : '' );
+
+		} else {
+
+			TOO.urlGHPages = 'https://' + TOO.user + '.github.io/' + TOO.repo + '/' + TOO.folder + ( TOO.folder ? '/' : '' );
+
+		}
+
+		getNextPreviousButtons();
+
+// all needed?
+
+		TOO.contents = contents;
+		TOO.breadcrumbs = menuBreadcrumbs;
+		TOO.menu = menuItems;
+		TOO.menuInfo = menuInfo;
+		TOO.button = button;
+
+		requestAPIContents();
+
 	}
 
 
@@ -158,6 +194,7 @@
 		contents.style.width = window.innerWidth - 350;
 
 	}
+
 
 </script>
 </body>
