--- a/tootoo/r5/tootoo-r5-theo-pages2.html
+++ b/tootoo/r5/tootoo-r5-theo-pages2.html
@@ -34,13 +34,12 @@
 	};
 */
 
-	var b = '<br>';
-
 	init();
 
 	function init() {
 
 		var css, container, contents, hamburger, menu;
+		var b = '<br>';
 
 		css = document.body.appendChild( document.createElement('style') );
 		css.innerHTML =
@@ -143,46 +142,12 @@
 
 		'';
 
-		button = document.body.appendChild( document.createElement( 'div' ) );
-		button.id = 'button';
-		button.innerHTML = 'Edit';
-
 		window.addEventListener( 'resize', onWindowResize, false );
 
 		onWindowResize();
 
-		setUser( 'theoArmour' );
+		TOO.init( users[ 'theoArmour' ] );
 
-
-	}
-
-	function setUser( user ){
-
-		TOO = users[ user ];
-// to JS?
-//		TOO.url = 'https://api.github.com/repos/' + TOO.user + '/' + TOO.repo + '/git/trees/' + TOO.branch + '?recursive=1';
-
-		if ( TOO.rawgit ) {
-
-			TOO.urlGHPages = 'https://rawgit.com/' + TOO.user + '/' + TOO.repo + '/' + TOO.branch + '/' + TOO.folder + ( TOO.folder ? '/' : '' );
-
-		} else {
-
-			TOO.urlGHPages = 'https://' + TOO.user + '.github.io/' + TOO.repo + '/' + TOO.folder + ( TOO.folder ? '/' : '' );
-
-		}
-
-		getNextPreviousButtons();
-
-// all needed?
-
-		TOO.contents = contents;
-		TOO.breadcrumbs = menuBreadcrumbs;
-		TOO.menu = menuItems;
-		TOO.menuInfo = menuInfo;
-		TOO.button = button;
-
-		requestAPIContents();
 
 	}
 
@@ -194,7 +159,6 @@
 		contents.style.width = window.innerWidth - 350;
 
 	}
-
 
 </script>
 </body>
