--- a/tootoo/r5/tootoo-r5.html
+++ b/tootoo/r5/tootoo-r5.html
@@ -100,7 +100,8 @@
 		repo : 'pushme-pullyou.github.io',
 		branch : 'master',
 		folder : '',
-		noIndex: 'true'
+		noIndex: 'true',
+		rawgit: null
 	};
 	users.sagemathGH = {
 		user : 'sagemath',
@@ -150,8 +151,6 @@
 	};
 */
 
-	var b = '<br>';
-
 	init();
 
 	function init() {
@@ -159,6 +158,7 @@
 // should there be a basic css in the JavaScript file?
 
 		var css, container, contents, hamburger, menu;
+		var b = '<br>';
 
 		css = document.body.appendChild( document.createElement('style') );
 		css.innerHTML =
@@ -217,7 +217,7 @@
 
 					'<summary><h3>Select GitHub User / Repo</h3></summary>' +
 
-						'<select id=SELselUser onchange=setUser(this.value); title="Select user" size=15 style=width:100%;  >' +
+						'<select id=SELselUser onchange=TOO.init(users[this.value]); title="Select user" size=15 style=width:100%;  >' +
 
 						'</select>' + b +
 
@@ -274,22 +274,15 @@
 
 		'';
 
-// to JS?
-
 		getMenuSelectUserOptions();
 
 		SELselUser.selectedIndex = users.keys.indexOf( user );
-
-		button = document.body.appendChild( document.createElement( 'div' ) );
-		button.id = 'button';
-		button.innerHTML = 'Edit';
 
 		window.addEventListener( 'resize', onWindowResize, false );
 
 		onWindowResize();
 
-		setUser( 'pushmePullyou' );
-
+		TOO.init( users[ 'pushmePullyou' ] );
 
 		if ( location.hash ) {
 
@@ -317,37 +310,6 @@
 	}
 
 
-	function setUser( user ){
-
-		TOO = users[ user ];
-// to JS?
-//		TOO.url = 'https://api.github.com/repos/' + TOO.user + '/' + TOO.repo + '/git/trees/' + TOO.branch + '?recursive=1';
-
-		if ( TOO.rawgit ) {
-
-			TOO.urlGHPages = 'https://rawgit.com/' + TOO.user + '/' + TOO.repo + '/' + TOO.branch + '/' + TOO.folder + ( TOO.folder ? '/' : '' );
-
-		} else {
-
-			TOO.urlGHPages = 'https://' + TOO.user + '.github.io/' + TOO.repo + '/' + TOO.folder + ( TOO.folder ? '/' : '' );
-
-		}
-
-		getNextPreviousButtons();
-
-// all needed?
-
-		TOO.contents = contents;
-		TOO.breadcrumbs = menuBreadcrumbs;
-		TOO.menu = menuItems;
-		TOO.menuInfo = menuInfo;
-		TOO.button = button;
-
-		requestAPIContents();
-
-	}
-
-
 	function onWindowResize() {
 
 		if ( window.self !== window.top || window.innerWidth < 500 ) { container.style.left = '-325px'; }
@@ -355,7 +317,6 @@
 		contents.style.width = window.innerWidth - 350;
 
 	}
-
 
 </script>
 </body>
