--- a/tootoo/index.html
+++ b/tootoo/index.html
@@ -6,7 +6,7 @@
 <body>
 <script>
 
-	window.location.href = './r5/tootoo-r5.html' + location.hash;
+	window.location.href = './r6/tootoo.html' + location.hash;
 
 </script>
 </body>
