--- a/tootoo/r6/tootoo-open-source-guide.html
+++ b/tootoo/r6/tootoo-open-source-guide.html
@@ -2,11 +2,11 @@
 <html lang=en >
 <head>
 <meta charset=utf-8 >
-<title>SageMath Docs</title>
+<title>Open Source Guide</title>
 <meta name=viewport content='width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no' >
 <meta name=description content='' >
 <meta name=keywords content='CSS,HTML,JavaScript,GitHub,FOSS' >
-<meta name=date content='2017-02-16' >
+<meta name=date content='2017-03-04' >
 </head>
 <body>
 <script src=https://cdn.rawgit.com/showdownjs/showdown/master/dist/showdown.min.js ></script>
@@ -25,17 +25,6 @@
 		rawgit: true,
 		noIndex : 'true'
 	};
-
-/*
-	users. = {
-		user : '',
-		repo : '',
-		branch : '',
-		folder : ''
-	};
-*/
-
-
 
 	init();
 
@@ -118,6 +107,8 @@
 					'<div id=menuInfo ></div>' + b +
 
 				'</details>' +
+
+				TOO.menuSettings +
 
 				'<details>' +
 
