--- a/tootoo/r6/tootoo-the-javascript-way.html
+++ b/tootoo/r6/tootoo-the-javascript-way.html
@@ -37,16 +37,16 @@
 			[ 'intro04.md', 'What you\'ll need' ],
 			[ 'header', 'Part I: Learn to code programs' ],
 
-			[ 'chapter01.md', '3, 2, 1... Code!' ],
-			[ 'chapter02.md', 'Play with variables' ],
-			[ 'chapter03.md', 'Add conditions' ],
-			[ 'chapter04.md', 'Repeat statements' ],
-			[ 'chapter05.md', 'Write functions'],
-			[ 'chapter06.md', 'Create your first objects'],
-			[ 'chapter07.md', 'Store data in arrays'],
-			[ 'chapter08.md', 'Work with strings'],
-			[ 'chapter09.md', 'Understand object-oriented programming' ],
-			[ 'chapter10.md', 'Discover functional programming'],
+			[ 'chapter01.md', '1. 3, 2, 1... Code!' ],
+			[ 'chapter02.md', '2. Play with variables' ],
+			[ 'chapter03.md', '3. Add conditions' ],
+			[ 'chapter04.md', '4. Repeat statements' ],
+			[ 'chapter05.md', '5. Write functions'],
+			[ 'chapter06.md', '6. Create your first objects'],
+			[ 'chapter07.md', '7. Store data in arrays'],
+			[ 'chapter08.md', '8. Work with strings'],
+			[ 'chapter09.md', '9. Understand object-oriented programming' ],
+			[ 'chapter10.md', '10. Discover functional programming'],
 			[ 'header', 'Part II: Create interactive web pages'],
 			[ 'header', '...'],
 			[ 'header', 'Part III: Build web apps'],
