--- a/tootoo/r6/tootoo-theoDraw.html
+++ b/tootoo/r6/tootoo-theoDraw.html
@@ -4,9 +4,9 @@
 <meta charset=utf-8 >
 <title>TA Drawing</title>
 <meta name=viewport content='width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no' >
-<meta name=description content='Basic slide in and slide out menu with three bar icon that adjusts for small screen size.' >
+<meta name=description content='Browse and view files on GitHub with remarkable ease >
 <meta name=keywords content='CSS,HTML,JavaScript,GitHub,FOSS' >
-<meta name=date content='2017-02-26' >
+<meta name=date content='2017-03-05' >
 </head>
 <body>
 <script src=https://cdn.rawgit.com/showdownjs/showdown/master/dist/showdown.min.js ></script>
