--- a/tootoo/r6/tootoo-masson-sagemath-docs.html
+++ b/tootoo/r6/tootoo-masson-sagemath-docs.html
@@ -6,7 +6,7 @@
 <meta name=viewport content='width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no' >
 <meta name=description content='' >
 <meta name=keywords content='CSS,HTML,JavaScript,GitHub,FOSS' >
-<meta name=date content='2017-02-16' >
+<meta name=date content='2017-03-05' >
 </head>
 <body>
 <script src=https://cdn.rawgit.com/showdownjs/showdown/master/dist/showdown.min.js ></script>
@@ -94,9 +94,7 @@
 
 				'<div class=popUp id=popHelp style=display:none; ><div>Hi there!</div>Click the i-in-circle, info icon for latest updates.</div>' +
 
-				'<div><small><i>Browse and view the contents of files on GitHub remarkably quickly</i></small></div>' + b +
-
-//				'<p><small>Browse some of my work with a utility I\'m in the process of building.</small></p>' +
+				'<div><small><i>Browse and view the contents of Sage Math files</i></small></div>' + b +
 
 				'<details open>' +
 
@@ -118,9 +116,11 @@
 
 				'</details>' +
 
+				TOO.menuSettings +
+
 				'<details>' +
 
-					'<summary><h3> About </h3></summary>' +
+					'<summary><h3>About </h3></summary>' +
 
 					'<p>Copyright &copy; 2017 Jaanga authors. <a href=http://jaanga.github.io/home/r4/index.html#http://jaanga.github.io/jaanga-copyright-and-mit-license.md >MIT license</a>.</p>' +
 					'<p>Click the \'i in a circle\' icon for more <a href=index.html#readme.md title="Click here for help and information" >help</a>.</p>' +
