--- a/tootoo/r6/tootoo-template.html
+++ b/tootoo/r6/tootoo-template.html
@@ -2,34 +2,30 @@
 <html lang=en >
 <head>
 <meta charset=utf-8 >
-<title>Front-end Handbook 2017</title>
+<title>TooToo Template</title>
 <meta name=viewport content='width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no' >
-<meta name=description content='Browse and view files on GitHub with remarkable ease' >
+<meta name=description content='Browse and view files on GitHub with remarkable ease.' >
 <meta name=keywords content='CSS,HTML,JavaScript,GitHub,FOSS' >
-<meta name=date content='2017-02-28' >
+<meta name=date content='2017-03-05' >
 </head>
 <body>
-<script src=https://cdn.rawgit.com/showdownjs/showdown/master/dist/showdown.min.js  ></script>
+<script src=https://cdn.rawgit.com/showdownjs/showdown/master/dist/showdown.min.js ></script>
 <script src=tootoo.js ></script>
 <script>
-// Copyright © 2017 Jaanga authors. MIT license
+// Copyright © 2017 PushMe PullYou authors. MIT license
 // https://github.com/showdownjs/showdown
 
-
-	var users = {
-		user : 'FrontendMasters',
-		repo : 'front-end-handbook-2017',
+	pushMePullyou = {
+		user : 'pushme-pullyou',
+		repo : 'pushme-pullyou.github.io',
 		branch : 'master',
 		folder : '',
-		rawgit: true
-//		noIndex: 'true'
+		noIndex : 'true'
 	};
 
 	init();
 
 	function init() {
-
-// should there be a basic css in the JavaScript file?
 
 		var css, container, contents, hamburger, menu;
 		var b = '<br>';
@@ -42,7 +38,7 @@
 			'summary { outline: none; }' +
 			'summary h3 { display: inline; }' +
 
-			'.popUp { background-color: white; border: 1px solid red; left: 150px; opacity: 1.0; padding: 5px; position: absolute; width: 120px; z-index: 10; }' +
+			'.popUp { background-color: white; border: 1px solid red; left: 180px; opacity: 1.0; padding: 5px; position: absolute; width: 120px; z-index: 10; }' +
 
 			'#bars { color: crimson; cursor: pointer; font-size: 24pt; text-decoration: none; }' +
 			'#button { background-color: #555; color: #fff; opacity: 0.5; padding: 8px; position: fixed; right: 20px; top: 20px; }' +
@@ -51,13 +47,13 @@
 			'#container {  height: 100%; left: 0; position: absolute; transition: left 1s; width: 100%; }' +
 
 // let each type of contents decide its best width and placement
-			'#contents { border: 0px #f00 solid; height: 100%; left: 325px; position: absolute; width: ' + ( window.innerWidth - 325 ) + 'px; }' +
+			'#contents { border: 0px #ccc solid; height: 100%; left: 325px; position: absolute; width: ' + ( window.innerWidth - 325 ) + 'px; }' +
 //			'#contents { border: 2px #ccc solid; margin-left: 325px; position: absolute; width: 100%; }' +
 
 			'#hamburger { background-color: #eee; left: 325px; position: absolute; top: 20px;  z-index: 1 }' +
 			'#hamburger h2 { margin: 0;}' +
 
-			'#menu { background-color: #eee; border: 0px #ccc solid; box-sizing:border-box; height: 100%; overflow-y: auto; padding: 0 10px; position: fixed; width: 325px; }' +
+			'#menu { background-color: #eee; border: 1px #ccc solid; box-sizing:border-box; height: 100%; overflow-y: auto; padding: 0 10px; position: fixed; width: 325px; }' +
 			'#menu h2 {margin: 0; }' +
 			'#menuBreadcrumbs h2, #menuBreadcrumbs h3 { font-size: 14pt; margin: 0; }' +
 
@@ -75,7 +71,8 @@
 		container.id = 'container';
 		container.innerHTML =
 
-				'<div id=menu >' +
+			'<div id=menu >' +
+
 
 				'<h2>' +
 					'<a href=https://pushme-pullyou.github.io/ title="Pushme-Pullyou - your coming and going happy place" > &#x2766 </a><br>' +
@@ -85,7 +82,7 @@
 
 				'<div class=popUp id=popHelp style=display:none; ><div>Hi there!</div>Click the i-in-circle, info icon for latest updates.</div>' +
 
-				'<div><small><i>A guide that anyone could use to learn about the practice of front-end development.</i></small></div>' + b +
+				'<p><small>Browse and view files on GitHub with remarkable ease.</small></p>' +
 
 				'<details open>' +
 
@@ -110,17 +107,14 @@
 				TOO.menuSettings +
 
 				'<details>' +
-
 					'<summary><h3>About</h3></summary>' +
-
-					'<p>Copyright &copy; 2017 Jaanga authors. <a href=https://jaanga.github.io/home/r4/index.html#http://jaanga.github.io/jaanga-copyright-and-mit-license.md >MIT license</a>.</p>' +
+					'<p>Copyright &copy; 2017 Pushme-Pullyou authors. <a href=http://pushme-pullyou/pushme-pullyou.github.io >MIT license</a>.</p>' +
 					'<p>Click the \'i in a circle\' icon for more <a href=index.html#readme.md title="Click here for help and information" >help</a>.</p>' +
-
 				'</details>' +
 
 				'<hr>' +
 				'<center><a href=javascript:menu.scrollTop=0; style=text-decoration:none; onmouseover=pop2.style.display=""; onmouseout=pop2.style.display="none"; ><h1> &#x2766 <h1></a></center>' +
-				'<div class=popUp id=pop2 style=display:none;bottom:10px; >Jaanga - your 3D happy place.<br>Click here to return to the top of the page</div>' +
+				'<div class=popUp id=pop2 style=display:none;bottom:20px; >Pushme-Pullyou - your GitHub exploring happy place.<br>Click here to return to the top of the page</div>' +
 
 			'</div>' +
 
@@ -129,7 +123,7 @@
 			'</div>' +
 
 			'<div id=contents >' +
-				'<h1>.</h1>' +
+				'<h1>Typical contents</h1>' +
 			'</div>' +
 
 		'';
@@ -138,41 +132,9 @@
 
 		onWindowResize();
 
-		TOO.init( users );
-
-
+		TOO.init( pushMePullyou );
 	}
 
-	function getFileMD( url ) {
-
-// https://github.com/showdownjs/showdown
-
-		showdown.setFlavor('github');
-
-		var converter = new showdown.Converter();
-
-		requestFile( url, callbackMD );
-
-		TOO.contents.style.overflowX = 'hidden';
-
-		function callbackMD( xhr ) {
-
-			text = converter.makeHtml( xhr.target.response );
-
-			text = text.replace( /src="/g, 'src="https://raw.githubusercontent.com/FrontendMasters/front-end-handbook-2017/master/images/' );
-
-console.log( 'txt', text );
-
-			TOO.contents.innerHTML =
-			'<div style="border: 0px red solid; margin: 0 auto; width: 800px; position: relative;" >' +
-				text +
-			'</div>';
-
-			getFileDataXHR( xhr );
-
-		}
-
-	}
 
 	function onWindowResize() {
 
