--- a/tootoo/r6/tootoo.html
+++ b/tootoo/r6/tootoo.html
@@ -168,7 +168,7 @@
 			'summary { outline: none; }' +
 			'summary h3 { display: inline; }' +
 
-			'.popUp { background-color: white; border: 1px solid red; left: 150px; opacity: 1.0; padding: 5px; position: absolute; width: 120px; z-index: 10; }' +
+			'.popUp { background-color: white; border: 1px solid red; left: 180px; opacity: 1.0; padding: 5px; position: absolute; width: 120px; z-index: 10; }' +
 
 			'#bars { color: crimson; cursor: pointer; font-size: 24pt; text-decoration: none; }' +
 			'#button { background-color: #555; color: #fff; opacity: 0.5; padding: 8px; position: fixed; right: 20px; top: 20px; }' +
@@ -262,7 +262,7 @@
 
 				'<hr>' +
 				'<center><a href=javascript:menu.scrollTop=0; style=text-decoration:none; onmouseover=pop2.style.display=""; onmouseout=pop2.style.display="none"; ><h1> &#x2766 <h1></a></center>' +
-				'<div class=popUp id=pop2 style=display:none;bottom:10px; >Jaanga - your 3D happy place.<br>Click here to return to the top of the page</div>' +
+				'<div class=popUp id=pop2 style=display:none;bottom:10px; >Pushme Pullyou - your GitHub API happy place.<br>Click here to return to the top of the page</div>' +
 
 			'</div>' +
 
