--- a/tootoo/r6/tootoo.html
+++ b/tootoo/r6/tootoo.html
@@ -103,6 +103,14 @@
 		noIndex: 'true',
 		rawgit: null
 	};
+	users.pushmePullyouTooTo = {
+		user : 'pushme-pullyou',
+		repo : 'pushme-pullyou.github.io',
+		branch : 'master',
+		folder : 'tootoo',
+		noIndex: 'true',
+		rawgit: null
+	};
 	users.sagemathGH = {
 		user : 'sagemath',
 		repo : 'sagemath.github.io',
@@ -285,6 +293,7 @@
 		onWindowResize();
 
 //		location.hash = 'path=ace-editor&file=readme.md';
+//		location.hash = 'path=tootoo&file=README.md';
 //		location.hash = 'user=paulmasson&repo=paulmasson.github.io&branch=master&file=readme.md';
 //		location.hash = 'user=mrdoob&repo=three.js&branch=dev&rawgit=true&file=README.md';
 
