update tootoo demos

--- a/tootoo/r6/tootoo-leader-photos.html
+++ b/tootoo/r6/tootoo-leader-photos.html
@@ -42,7 +42,7 @@
 
 		var css, container, contents, hamburger, menu;
 
-    		css = document.body.appendChild( document.createElement('style') );
+    	css = document.body.appendChild( document.createElement('style') );
 		css.innerHTML =
 			'html, body { font: 12pt monospace; height: 100%; margin: 0; }' +
 			'a { color: crimson; text-decoration: none; }' +
@@ -99,7 +99,7 @@
 
 				'<details open>' +
 
-					'<summary><h3>Menu</h3></summary>' +
+					'<summary><h3 id=menuTitle >Menu</h3></summary>' +
 
 					'<div id=menuBreadcrumbs ></div>' + b +
 
