--- a/tootoo/r6/tootoo-theo-pages2.html
+++ b/tootoo/r6/tootoo-theo-pages2.html
@@ -99,7 +99,7 @@
 
 				'<details open>' +
 
-					'<summary><h3>Menu</h3></summary>' +
+					'<summary><h3 id=menuTitle >Menu</h3></summary>' +
 
 					'<div id=menuBreadcrumbs ></div>' + b +
 
