--- a/tootoo/r6/tootoo.html
+++ b/tootoo/r6/tootoo.html
@@ -223,7 +223,7 @@
 
 				'<details id=SELdetailsUser open title="" >' +
 
-					'<summary><h3> Select User/ Repo/ Branch </h3></summary>' +
+					'<summary><h3>Select User/ Repo/ Branch </h3></summary>' +
 
 						'<select id=SELselUser onchange=TOO.init(users[this.value]); title="Select user" size=15 style=width:100%;  >' +
 
@@ -239,7 +239,7 @@
 
 				'<details open>' +
 
-					'<summary><h3> Menu </h3></summary>' +
+					'<summary><h3 id=menuTitle > Menu </h3></summary>' +
 
 					'<div id=menuBreadcrumbs ></div>' + b +
 
@@ -249,7 +249,7 @@
 
 				'<details>' +
 
-					'<summary><h3> Current File Info </h3></summary>' +
+					'<summary><h3>Current File Info </h3></summary>' +
 
 					'<div id=menuFileData ></div>' + b +
 
