--- a/gubgub/r2/2-eus-events-user/eus-events-user.html
+++ b/gubgub/r2/2-eus-events-user/eus-events-user.html
@@ -34,10 +34,11 @@
 //	var user = 'ladybug-analysis-tools';
 //	var user = 'torvalds';
 //	var user = 'paulmasson';
-//	var user = 'theo-armour';
+	var user = 'theo-armour';
+//	var user = 'mrdoob';
+//	var user = 'jquery';
 
-	user = 'mrdoob';
-	DAT.userData.login = 'jquery';
+	DAT.userData.login = user;
 
 
 //	location.hash = '#README.md';
