--- a/tootoo/r6/tootoo-6-2-template.html
+++ b/tootoo/r6/tootoo-6-2-template.html
@@ -2,11 +2,11 @@
 <html lang=en >
 <head>
 <meta charset=utf-8 >
-<title>📈 Jaanga SP500</title>
+<title>TooToo Template 6.1</title>
 <meta name=viewport content='width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no' >
-<meta name=description content='A variety of tools to browse and view all S&P 500 symbols all at once.' >
-<meta name=keywords content='Three.js,WebGL,CSS,HTML,JavaScript,GitHub,FOSS' >
-<meta name=date content='2017-03-19' >
+<meta name=description content='Browse and view files on GitHub with remarkable ease.' >
+<meta name=keywords content='CSS,HTML,JavaScript,GitHub,FOSS' >
+<meta name=date content='2017-03-09' >
 </head>
 <body>
 <script src=https://cdn.rawgit.com/showdownjs/showdown/master/dist/showdown.min.js ></script>
@@ -16,10 +16,9 @@
 // https://github.com/showdownjs/showdown
 
 	let user = {
-		user : 'jaanga',
-		subText : 'Your 3D happy place',
-		repo : 'sp500',
-		branch : 'gh-pages',
+		user : 'pushme-pullyou',
+		repo : 'pushme-pullyou.github.io',
+		branch : 'master',
 		folder : '',
 		noIndex : 'true'
 	};
@@ -29,13 +28,14 @@
 	function init() {
 
 		let css, container, contents, hamburger, menu;
-		let b = '<br>';
+		const b = '<br>';
 
 		css = document.body.appendChild( document.createElement('style') );
 		css.innerHTML =
 			'html, body { font: 12pt monospace; height: 100%; margin: 0; }' +
 			'a { color: crimson; text-decoration: none; }' +
 			'button, input[type=button] { background-color: #ccc; border: 2px #fff solid; color: #322; }' +
+			'pre, blockquote { background-color: #eee; padding: 10px; }' +
 			'summary { outline: none; }' +
 			'summary h3 { display: inline; }' +
 
@@ -54,8 +54,8 @@
 			'#hamburger { background-color: #eee; left: 325px; position: absolute; top: 20px;  z-index: 1 }' +
 			'#hamburger h2 { margin: 0;}' +
 
-			'#menu { background-color: #eee; border: 1px #ccc solid; box-sizing:border-box; height: 100%; overflow-y: auto; padding: 0 10px; position: fixed; width: 325px; }' +
-			'#menu h2 {margin: 0; }' +
+			'#menu { background-color: #eee; border: 0px #ccc solid; box-sizing:border-box; height: 100%; overflow-y: auto; padding: 0 10px; position: fixed; width: 325px; }' +
+			'#menu h2, #menu h4 {margin: 0; }' +
 			'#menuBreadcrumbs h2, #menuBreadcrumbs h3 { font-size: 14pt; margin: 0; }' +
 
 			'#nextFile { color: #888; font-size: 36pt; opacity: 0.5; padding: 8px; position: fixed; right: 20px; top: ' + (0.5 * window.innerHeight ) + 'px; }' +
@@ -127,7 +127,7 @@
 			'</div>' +
 
 			'<div id=contents >' +
-				'<h1>Typical contents</h1>' +
+				'<h1>.</h1>' +
 			'</div>' +
 
 		'';
